syntax = "proto3";
option go_package=".;addressvalidator";

service AddressValidator {
	rpc ValidateAddress(ValidateRequest) returns (ValidateResponse) {}
}

message ValidateRequest {
	string chain = 1;
	string address = 2;
	bool is_testnet = 3;
}

message ValidateResponse {
	bool is_valid = 1;
	string msg = 2;
	string type = 3;
	string status = 4;
}